Multiple nameservers configuration

--- a/tasks/ocp4-nodes-create.yaml
+++ b/tasks/ocp4-nodes-create.yaml
@@ -96,7 +96,7 @@
       - key: "guestinfo.ignition.config.data"
         value: "{{ ignition_payload }}"
       - key: "guestinfo.afterburn.initrd.network-kargs"
-        value: "ip={{ item.ip }}::{{ default_gw }}:{{ netmask }}:::none:{{ nameserver }}"
+        value: "ip={{ item.ip }}::{{ default_gw }}:{{ netmask }}:::none:{{ nameservers }}"
     wait_for_ip_address: no
   loop: "{{ nodes }}"
   delegate_to: localhost
