--- a/vars/ocp4-vars-proxy-whitelist.yaml
+++ b/vars/ocp4-vars-proxy-whitelist.yaml
@@ -4,36 +4,11 @@ proxy_whitelist_mandatory:
   - registry.redhat.io
   - quay.io
   - sso.redhat.com
+  - openshift.org
   - cert-api.access.redhat.com
   - api.access.redhat.com
   - infogw.api.openshift.com
   - cloud.redhat.com
   - mirror.openshift.com
   - api.openshift.com
-  - redhat.com
   - registry.access.redhat.com
-  - docker.io
-  - docker.com
-  - hub.docker.com
-  - index.docker.io
-  - github.com
-  - pypi.org
-  - python.org
-  - pythonhosted.org
-
-proxy_whitelist_optional:
-  - apache.org
-  - npmjs.com
-  - openshift.io
-  - okd.io
-  - rubygems.org
-  - cpan.org
-  - githubapp.com
-  - fabric8.io
-  - jenkins.io
-  - bintray.com
-  - spring.io
-  - eclipse.org
-  - fusesource.com
-  - centos.org
-  - cloudflare.com
