--- a/playbooks/ocp4-playbook-cluster-create.yaml
+++ b/playbooks/ocp4-playbook-cluster-create.yaml
@@ -25,9 +25,6 @@
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-ignition-config.yaml"
       tags: [ replaceign, create_manifest ]
 
-    - name: include task for httpd ignition providing
-      include_tasks: "{{ playbook_dir }}/../tasks/ocp4-httpd-ignition-provide.yaml"
-
     - name: Include vars for ignition files
       include_vars:
         file: "{{ playbook_dir }}/../vars/ocp4-vars-dynamic.yaml"
@@ -37,10 +34,10 @@
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-create.yaml"
       vars:
         nodes: "{{ bootstrap }}"
-        ignition_payload: "{{ append_bootstrap_ign }}"
+        ignition_payload: "{{ bootstrap_ign }}"
         default_gw: "{{ machineCIDR_default_gw }}"
         netmask: "{{ machineCIDR_netmask }}"
-        nameservers: "{{ machineDNS | join(':') }}"
+        nameservers: "{{ machineDNS }}"
       tags: vmware
       when: bootstrap is defined
 
@@ -51,7 +48,7 @@
         ignition_payload: "{{ master_ign }}"
         default_gw: "{{ machineCIDR_default_gw }}"
         netmask: "{{ machineCIDR_netmask }}"
-        nameservers: "{{ machineDNS | join(':') }}"
+        nameservers: "{{ machineDNS }}"
       tags: vmware
       when: masters is defined
 
@@ -62,7 +59,7 @@
         ignition_payload: "{{ worker_ign }}"
         default_gw: "{{ machineCIDR_default_gw }}"
         netmask: "{{ machineCIDR_netmask }}"
-        nameservers: "{{ machineDNS | join(':') }}"
+        nameservers: "{{ machineDNS }}"
       tags: vmware
       when: workers is defined
 
